# CDFR2025

./: .gitignore  .gitmodules  README.md
FIPABOT/: 11HS12-0674S.CATPart  ARBRE_ROUE.CATProduct  BASE.CATProduct  Configuration 2.1.CATPart  Configuration 2.CATPart  ELEVATEUR.CATProduct  HPC - CLG1-20 (C).catpart.CATPart  HPC - CLG1-40 (C).catpart.CATPart  ISO_10642_M5x12_STEEL_HEXAGON_SOCKET_COUNTERSUNK_HEAD_SCREW.CATPart  MOTORISATION VERTICALE.CATProduct  PIGNON CREMAILLERE.CATProduct  PINCE.CATProduct  Part1.CATPart  Part2.CATPart  Part30.CATPart  Profil_20x20_Vslot.CATPart  Profil_20x20_Vslot_largeur.CATPart  Profil_20x20_Vslot_longueur.CATPart  ROBOT.CATProduct  arbre_seul.CATPart  arret planche.CATPart  bras de pince.CATPart  bride de courroie.CATPart  conserve.CATPart  cremaillere.CATPart  entretoise.CATPart  galet.CATPart  glissiere.CATPart  glissiere_centre.CATPart  hpc_12T5-15_ECO_c.catpart  hpc_12T5-15_ECO_c.catpart.CATPart  hs-422.CATProduct  interface_nm.CATPart  interface_servo.CATPart  jonction de courroie.CATPart  moteur roues.CATPart  nema 17.CATPart  planche.CATPart  plaque mobile.CATDrawing  plaque mobile.CATPart  (+18 more)
FIPABOT/inventor/: arbre_roue.iam  arbre_roue.ipt  arbre_roue.stp  joint_jf4_libre_202003.ipt  jonction de courroie.ipt  roue.ipt  support_codeur.ipt  support_codeur.stp
FIPABOT/plans dxf/: support_m_v.dxf
FIPABOT/stl/: arret planche.stl  glissiere.stl  glissiere_centre.stl  jonction de courroie.stl  support moteur D.stl  support moteur G.stl  support_codeur.stl
FIPABOT/stp/: bride de courroie.stp  jonction de courroie.stp
firmware/robot_firmware/: .mxproject  robot_firmware.ioc  structure.txt
robot_firmware/: backup_robot_firmware.ioc  robot_firmware.ioc  structure.txt
robot_firmware/EWARM/: Project.eww
robot_firmware/STM32CubeIDE/: .project  robot_firmware Debug.launch
robot_firmware/TouchGFX/: robot_firmware.touchgfx
software/ros2_ws/src/match_control/: CMakeLists.txt  package.xml
software/ros2_ws/src/match_control/config/strategies/: strategy_0_3_0.yaml  strategy_0_3_1.yaml  strategy_0_3_2.yaml  strategy_0_4_0.yaml  strategy_0_4_1.yaml  strategy_0_4_2.yaml  strategy_0_5_0.yaml  strategy_0_5_1.yaml  strategy_0_5_2.yaml  strategy_1_0_3.yaml  strategy_1_0_4.yaml  strategy_1_0_5.yaml  strategy_1_1_3.yaml  strategy_1_1_4.yaml  strategy_1_1_5.yaml  strategy_1_2_3.yaml  strategy_1_2_4.yaml  strategy_1_2_5.yaml
software/ros2_ws/src/match_control/launch/: match_control.launch.py
software/ros2_ws/src/match_control/src/: match_control.cpp
software/ros2_ws/src/uart_bridge/: CMakeLists.txt  package.xml
software/ros2_ws/src/uart_bridge/launch/: uart_bridge.launch.py
software/ros2_ws/src/uart_bridge/src/: uart_bridge.cpp  uart_commands.h
(+365 files in other folders)
