<?xml version="1.0"?>
<package format="3">
  <name>uart_bridge</name>
  <version>0.1.0</version>
  <description>Interface UART ROS2 pour communiquer avec la STM32</description>

  <maintainer email="jocelyn.deleuil@ensta.fr">Jocelyn Deleuil</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
